clean up ids, reduce load times by simplifying first game

--- a/web/walkthrough.html
+++ b/web/walkthrough.html
@@ -2968,11 +2968,12 @@
 
             <div>
                 <figure id="ex1" class="example">
-                    <cgt-konane id="intro-game" controls="right">
-                        xoxox
-                        oxo_o
-                        xo_ox
-                        oxoxo
+                    <cgt-value for="#ex1 cgt-konane"></cgt-value>
+                    <cgt-konane controls="right">
+                        oxox
+                        x_xo
+                        o_ox
+                        xoxo
                     </cgt-konane>
                     <figcaption>Kōnane</figcaption>
                 </figure>
@@ -2988,7 +2989,7 @@
                 </p>
                 <div class="stack horizontal">
                     <figure id="ex2" class="example">
-                        <cgt-konane id="intro-game" controls="right">
+                        <cgt-konane controls="right">
                             _____
                             _____
                             ___ox
@@ -2998,7 +2999,7 @@
                     </figure>
 
                     <figure id="ex3" class="example">
-                        <cgt-konane id="intro-game" controls="right">
+                        <cgt-konane controls="right">
                             _____
                             _____
                             _o_ox
@@ -3014,7 +3015,6 @@
                     Try moving in those games by clicking on the black piece.
                 </p>
             </div>
-        
         </section>
     </main>
 </body>
